--- a/index.html
+++ b/index.html
@@ -1014,7 +1014,7 @@
         <div class="relative">
             <div class="absolute top-0 bottom-0 left-0 w-1 bg-gradient-to-b from-accent to-accent-dark rounded-full"></div>
             <blockquote class="pl-6 py-3 pr-3 mb-5 italic">
-                <p class="text-white">, героїв <span class="text-accent">Overwatch</span> або класи в <span class="text-accent">Diablo</span>. Ми будемо створювати класи персонажів, які мають приблизно 3-5 унікальних Сил.
+                <p class="text-white">Наприклад, героїв <span class="text-accent">Overwatch</span> або класи в <span class="text-accent">Diablo</span>. Ми будемо створювати класи персонажів, які мають приблизно 3-5 унікальних Сил.
                 </p>
             </blockquote>
         </div>
